[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.11"]

[tool.poetry.scripts]
rummy = "rummy.__main__:main"

[tool]
[tool.poetry]
name = "rummy"
version = "2.1.5"
description = "Console Rummy game"
authors = ["Sarcoma <sean@orderandchaoscreative.com>"]
license = "MIT"
[tool.poetry.dependencies]
Pygments = "2.3.1"
ansi-colours = "1.0.0"
codecov = "2.1.13"
colorama = "0.4.1"
coverage = "4.5.4"
more-itertools = "7.2.0"
pytest = "4.6.11"
pytest-cov = "2.8.1"
pytest-mock = "2.0.0"
python = "^3.8"
text-template = "0.1.4"
[tool.poetry.group.dev.dependencies]
