[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.11"]

[tool.poetry.scripts]
rummy = "rummy.__main__:main"

[tool]
[tool.poetry]
name = "rummy"
version = "2.1.5"
description = "Console Rummy game"
authors = ["Sarcoma <sean@orderandchaoscreative.com>"]
license = "MIT"
[tool.poetry.dependencies]
Pygments = "2.19.2"
ansi-colours = "1.0.0"
codecov = "2.1.13"
colorama = "0.4.6"
coverage = "7.6.1"
more-itertools = "10.5.0"
pytest = "4.6.11"
pytest-cov = "5.0.0"
pytest-mock = "3.2.0"
python = "^3.8"
text-template = "0.1.4"
certifi = ">=2023.7.22,<2024.8.0"
urllib3 = ">=2.6.3"
idna = "3.11"
[tool.poetry.group.dev.dependencies]
